--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
       <h2>Content Creation Support</h2>
 
       <div class="person">
-        <img src="aaditya_photo.jpg" alt="Aaditya Goel">
+        <img src="https://s3.amazonaws.com/cbrig-assets/csoethp/resources/Student/S120iGp6.JPG" alt="Aaditya Goel">
         <div class="contact-details">
           <p>Name: Aaditya Goel</p>
           <p>
@@ -156,7 +156,7 @@
       </div>
 
       <div class="person">
-        <img src="aditya_photo.jpg" alt="Aditya Puri">
+        <img src="https://s3.amazonaws.com/cbrig-assets/csoethp/resources/Student/S14536OK.JPG" alt="Aditya Puri">
         <div class="contact-details">
           <p>Name: Aditya Puri</p>
           <p>
