--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
 
         #user-profile {
             cursor: pointer;
+            color:red;
+            background-color:green;
         }
 
         #otp-popup {
