--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
             cursor: pointer;
             color:red;
             background-color:green;
+            position:absolute;
+            width:150px;
         }
 
         #otp-popup {
