--- a/index.html
+++ b/index.html
@@ -100,6 +100,25 @@
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     z-index: 1000;
 }
+        .container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+#climate-container .btn {
+    width: 80%; /* Make buttons take full width */
+    margin-top: 10px; /* Adjust margin between buttons */
+}
+
+.container {
+    max-width: 600px;
+    margin: 50px 0 50px auto; /* Adjust margin to position the container */
+    background-color: #e72b2b41;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
     </style>
 </head>
