--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         #user-profile {
             cursor: pointer;
             color:red;
-            background-color:green;
+            background-color:blue;
             position:absolute;
-            width:150px;
+            width:100px;
         }
 
         #otp-popup {
@@ -119,7 +119,25 @@
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+@media only screen and (max-width: 767px) {
+    .container {
+        margin: 20px auto;
+    }
+}
 
+/* Tablets */
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .container {
+        margin: 30px auto;
+    }
+}
+
+/* Laptops and desktops */
+@media only screen and (min-width: 1024px) {
+    .container {
+        margin: 50px auto;
+    }
+}
     </style>
 </head>
 
