--- a/contact.html
+++ b/contact.html
@@ -185,6 +185,9 @@ footer {
   <section class="faq">
     <h2>FAQ</h2>
     <!-- Add your FAQ content here -->
+     <p>
+      <a href="faq.html">check some of the faqs</a>
+    </p>
   </section>
 
   <section class="feedback-form">
