--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <div id="otp-popup"></div>
 
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <script src="login.js"></script>
+    <script src="index.js"></script>
 
     <!-- Add the loading message script -->
    
