--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            color:red;
         }
 
         label {
@@ -90,6 +91,9 @@
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
             z-index: 1000;
         }
+        h2{
+            color:red;
+        }
     </style>
 </head>
 
@@ -112,7 +116,7 @@
             <label for="otp">Enter OTP:</label>
             <input type="text" id="otp" required>
 
-            <div class="g-recaptcha" data-sitekey="6LfK2UIpAAAAAKYOB9aCun2U6KEt_Xx6ChMUTZiS"></div>
+            <div class="g-recaptcha" data-sitekey="6LeXlkopAAAAAN8kYA9qOH69K8uM2cHiMUdtVdai"></div>
 
             <button type="button" onclick="validateOTP()">Login</button>
         </form>
