--- a/home.html
+++ b/home.html
@@ -74,6 +74,20 @@
         .btn:hover {
             background-color: #d88e0e;
         }
+
+        @media screen and (max-width: 768px) {
+            #climate-container {
+                max-width: 100%;
+                margin: 20px;
+            }
+             @keyframes typewriter {
+            from {
+                width: 0;
+            }
+            to {
+                width: 100%;
+            }
+        }
     </style>
 </head>
 
