--- a/home.html
+++ b/home.html
@@ -80,12 +80,17 @@
                 max-width: 100%;
                 margin: 20px;
             }
-             @keyframes typewriter {
-            from {
-                width: 0;
-            }
-            to {
+
+            .btn {
                 width: 100%;
+            }
+
+            #user-container {
+                margin: 10px;
+            }
+
+            #welcome-message {
+                font-size: 0.8em;
             }
         }
     </style>
